[package]
name = "mini_http"
version = "0.0.3"
authors = ["James Kominick <james.kominick@gmail.com>"]
description = "Simple HTTP server built on mio"
documentation = "https://docs.rs/mini_http"
readme = "README.md"
keywords = ["web"]
categories = ["web-programming::http-server", "asynchronous"]
license = "MIT"

[dependencies]
error-chain = "0.12"
mio = { version = "0.8.2", features=[ "os-poll", "net" ] }
slab = "0.4"
httparse = "1"
http = "0.1"
log = "0.4"
simple_logger = "2.1"

[[example]]
name = "hello"

[[example]]
name = "hello_wasi"

[[example]]
name = "echo"